force-app/main/default/objects/Experience__c/Experience__c.object-meta.xml
<CustomObject>
    <description
  >Experience records for the Salesforce Portfolio app.</description>
    <label>Experience</label>
    <nameField>
        <label>Role Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experience</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>