force-app/main/default/objects/Experience__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>