force-app/main/default/objects/Experience__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Is_Current__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Experience</label>
</ListView>